# ProjectRhythm

./: .gitmodules  CMakeLists.txt  README.md  makefile
Notes/: notes
src/: CMakeLists.txt  main.c  main.cpp  wave.c  wave.cpp  wave.h
